--- a/LoginRegistroCRUD.csproj
+++ b/LoginRegistroCRUD.csproj
@@ -67,11 +67,46 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Sources\Images\profile-icon.jpg" />
+    <Content Include="Sources\Images\programming-logo.png" />
+    <Content Include="Sources\JavaScript\script.js" />
+    <Content Include="Sources\Pages\FrmImagen.aspx" />
+    <Content Include="Sources\Pages\FrmIndex.aspx" />
+    <Content Include="Sources\Pages\FrmLogin.aspx" />
+    <Content Include="Sources\Pages\FrmPerfil.aspx" />
     <Content Include="Sources\Pages\FrmRegistro.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sources\Pages\FrmImagen.aspx.cs">
+      <DependentUpon>FrmImagen.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Sources\Pages\FrmImagen.aspx.designer.cs">
+      <DependentUpon>FrmImagen.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Sources\Pages\FrmIndex.aspx.cs">
+      <DependentUpon>FrmIndex.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Sources\Pages\FrmIndex.aspx.designer.cs">
+      <DependentUpon>FrmIndex.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Sources\Pages\FrmLogin.aspx.cs">
+      <DependentUpon>FrmLogin.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Sources\Pages\FrmLogin.aspx.designer.cs">
+      <DependentUpon>FrmLogin.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Sources\Pages\FrmPerfil.aspx.cs">
+      <DependentUpon>FrmPerfil.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Sources\Pages\FrmPerfil.aspx.designer.cs">
+      <DependentUpon>FrmPerfil.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Sources\Pages\FrmRegistro.aspx.cs">
       <DependentUpon>FrmRegistro.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -79,9 +114,17 @@
     <Compile Include="Sources\Pages\FrmRegistro.aspx.designer.cs">
       <DependentUpon>FrmRegistro.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Sources\Pages\MP.Master.cs">
+      <DependentUpon>MP.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Sources\Pages\MP.Master.designer.cs">
+      <DependentUpon>MP.Master</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <Content Include="Sources\Pages\MP.Master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -89,10 +132,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Sources\Images\" />
-    <Folder Include="Sources\JavaScript\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
